updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello I'm John and I'm here to learn.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Durham, NC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My hobbies are cooking and playing sports</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To run my own business</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Durham, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To deveop a website for businesses I want to make as well as for my family</p>
     </section>
 
     <footer id="footer">
